OY-3358 : Java version to 11, Fix HakukohderyhmaService